<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#CC000000"
    android:gravity="center"
    android:id="@+id/lll"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbarcolor"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:id="@+id/my_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/baloo"
                    android:text="@string/t1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo"
                    android:text="@string/t2"
                    android:textColor="@color/white"
                    android:textSize="45sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_margin="8dp"
                    android:textSize="18sp"
                    android:ems="10"
                    android:fontFamily="@font/baloo"
                    android:hint="@string/weight"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/heightFt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/baloo"
                        android:hint="@string/heightFt"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/heightIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/baloo"
                        android:hint="@string/heightIn"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/shape"
                android:fontFamily="@font/baloo"
                android:text="@string/health"
                android:textSize="18sp"
                android:textColor="@color/black" />


        </LinearLayout>



</LinearLayout>